# da

./: main.py  pyproject.toml
ds_book/chapters/07/: 7_0_Visualization.ipynb  7_1_Visualizing_Categorical_Distributions.ipynb  7_2_Visualizing_Numerical_Distributions.ipynb  7_3_Overlaid_Graphs.ipynb
ds_book/chapters/11/: 11_0_Testing_Hypotheses.ipynb  11_1_Assessing_a_Model.ipynb  11_2_Multiple_Categories.ipynb  11_3_Decisions_and_Uncertainty.ipynb  11_4_Error_Probabilities.ipynb
ds_book/chapters/12/: 12_0_Comparing_Two_Samples.ipynb  12_1_AB_Testing.ipynb  12_2_Causality.ipynb  12_3_Deflategate.ipynb
ds_book/chapters/14/: 14_0_Why_the_Mean_Matters.ipynb  14_1_Properties_of_the_Mean.ipynb  14_2_Variability.ipynb  (+5 more)
exercises/: exercise01.ipynb  exercise02.ipynb  exercise03.ipynb  exercise04.ipynb  exercise05.ipynb  exercise06.ipynb  exercise07.ipynb  exercise08.ipynb  exercise09.ipynb  exercise11.ipynb  exercise12.ipynb  exercise13.ipynb
exercises/data/: cary.geojson  cary_tracts.geojson  fpa_az_ca_fires.csv  us_cities15000.txt
gds_book/notebooks/: 01_geo_thinking.ipynb  02_geospatial_computational_environment.ipynb  03_spatial_data.ipynb  04_spatial_weights.ipynb  05_choropleth.ipynb  06_spatial_autocorrelation.ipynb  07_local_autocorrelation.ipynb  08_point_pattern_analysis.ipynb  09_spatial_inequality.ipynb  10_clustering_and_regionalization.ipynb  11_regression.ipynb  12_feature_engineering.ipynb
practice/: tech_assignment.ipynb
python_refesh/: py_refresher.ipynb
python_refesh/data/: az_data.csv
raster_book/notebooks/: chapter_5_classification.ipynb
(+29 files in other folders)
