[project]
name = "gsp538"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "branca>=0.8.2",
    "contextily>=1.7.0",
    "datashader>=0.18.2",
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "ipykernel>=7.2.0",
    "libpysal>=4.14.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "osmnx>=2.1.0",
    "pandas>=3.0.1",
    "rasterio>=1.5.0",
    "rasterstats>=0.20.0",
    "rioxarray>=0.22.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
